# example-vscode-cpp

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.old.txt  CMakeLists.txt  CMakePresets-template.json  CMakePresets.json  LICENSE  README.md  makefile
.devcontainer/: Dockerfile  devcontainer.json
include/lista01/: get_data.hpp
resources/: hello.txt
src/: main.cpp
tests/: get_data.test.cpp
